# pykeepass

./: .autoenv.zsh  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  attachment.md  baseelement.md  entry.md  exceptions.md  group.md  icons.md  index.html  kdbx_parsing.common.md  kdbx_parsing.kdbx.md  kdbx_parsing.kdbx3.md  kdbx_parsing.kdbx4.md  kdbx_parsing.md  kdbx_parsing.pytwofish.md  kdbx_parsing.twofish.md  package.json  pykeepass.html  pykeepass.md  pyproject.toml  requirements-dev.txt  requirements-rtd.txt  requirements.txt  setters.md  setup.cfg  setup.py  version.md  xpath.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
dev/: construct_copy.py  issue219_adaptertest.py  pykeepass_issue219.py  pykeepass_issue219_actual.py  pykeepass_issue219_construct.py  pykeepass_issue219_deleteme.py  pykeepass_issue219_struct.py  pykeepass_issue223.py  pykeepass_issue280.py  pykeepass_issue327.py  pykeepass_issue330.py  pykeepass_issue337.py  pykeepass_issue338.py  pykeepass_issue358.py  test4.key  test_issue223.py
doc/source/: __main__.rst  attachment.rst  baseelement.rst  conf.py  entry.rst  exceptions.rst  group.rst  icons.rst  index.rst  pykeepass.rst
doc/source/kdbx_parsing/: common.rst  kdbx.rst  kdbx3.rst  kdbx4.rst  pytwofish.rst  twofish.rst
pykeepass/: __init__.py  __main__.py  attachment.py  baseelement.py  blank_database.kdbx  common.py  custom_icon.py  deprecated.py  entry.py  exceptions.py  fido2.py  group.py  icons.py  multifactor_format.rst  official_icons.py  pkpwrite.py  pykeepass.py  tests.py  version.py  xmlfactory.py  xpath.py
pykeepass/kdbx_parsing/: __init__.py  common.py  common.py.orig  factorinfo.py  kdbx.py  kdbx3.py  kdbx4.py  pytwofish.py  twofish.py
tests/: Export to html and email.py  change.key  extra_content.kdbx  sample1.kdbx  sample2.kdbx  sample2_keyfile.key  sample3.kdbx  sample4.kdbx  test.kdbx  test3.kdbx  test3.key  test4.kdbx  test4.key  test4_aes.kdbx  test4_aes_uncompressed.kdbx  test4_aeskdf.kdbx  test4_argon2id.kdbx  test4_blankpass.kdbx  test4_chacha20.kdbx  test4_chacha20_uncompressed.kdbx  test4_hex.kdbx  test4_hex.key  test4_keyx.kdbx  test4_keyx.keyx  test4_twofish.kdbx  test4_twofish_uncompressed.kdbx  test_bytes_streams.py  test_invalidversion.key  tests.py
