[project]
name = "pykeepass"
readme = "README.rst"
description = "Python library to interact with keepass databases (supports KDBX3 and KDBX4)"
authors = [
    { name = "Philipp Schmitt", email = "philipp@schmitt.co" },
    { name = "Evan Widloski", email = "evan_gh@widloski.com" }
]
license = {text = "GPL-3.0"}
keywords = ["vault", "keepass"]
dependencies = [
    "python-dateutil",
    "construct",
    "argon2_cffi",
    "pycryptodomex>=3.6.2",
    "lxml",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/libkeepass/pykeepass"

[tool.setuptools.dynamic]
version = {attr = "pykeepass.version.__version__"}

[tool.setuptools]
packages = ["pykeepass"]
include-package-data = true
